# spec-compliance-checker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  PLAN.md  README.md  SPEC.md  WHITEBOARD-DRILL.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: pipeline.py  views.py
app/check/: types.py  verdict.py
app/data/: corpus.py
app/extract/: extract.py  observations.py  prompts.py  schemas.py
app/ingest/: parse.py
app/report/: render.py  sign_off.py
app/templates/: base.html  index.html  report.html  requirements.html  results.html
config/: settings.py  urls.py
tests/: test_corpus.py  test_extract_contract.py  test_ingest.py  test_pipeline.py  test_report.py  test_smoke.py  test_verdict.py  test_views.py
